# SimplePlatform

./: CMakeLists.txt
include/Engine/: Component.hpp  GameObject.hpp  GameObject.inl  ResourceManager.hpp  ResourceManager.inl  State.hpp  StateManager.hpp  StateManager.inl
include/Engine/Utils/: Color.hpp
include/Game/: Application.hpp  Level.hpp
include/Game/Components/: Animation.hpp  Position.hpp  Sprite.hpp
include/Game/States/: GameState.hpp  IntroState.hpp  LoadingState.hpp  MenuState.hpp
include/UI/: Button.hpp
lib/sfml/include/SFML/Graphics/: Rect.hpp  Text.hpp  Transformable.hpp
lib/sfml/include/SFML/System/: String.hpp
lib/sfml/include/SFML/Window/: Window.hpp
src/: Animation.cpp  Application.cpp  Button.cpp  GameObject.cpp  GameState.cpp  IntroState.cpp  Level.cpp  LoadingState.cpp  MenuState.cpp  Position.cpp  Sprite.cpp  State.cpp  StateManager.cpp  main.cpp
